Fix checkboxes on PTO calendar (close #38)
Prevent `box-sizing` overlapping by fullcalendar.js

--- a/Punched Out/Buddy Punch_files/bundle.css
+++ b/Punched Out/Buddy Punch_files/bundle.css
@@ -72736,6 +72736,10 @@ fieldset.container {
     border-radius: 2px;
 }
 
+.m-checkbox > span:after {
+    box-sizing: border-box;
+}
+
 .fc-filter-header .m-portlet__head{
     border-bottom: 1px solid #e3e8ee;
 }
